Optimized code that runs the tokenizer.
Tokenizer is fully done and ready to be attached to the parser.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ set(CMAKE_CXX_FLAGS_MINSIZEREL "-s -Os -O3 -Ofast ${CMAKE_CXX_FLAGS_MINSIZEREL}"
 
 # compiler
 add_definitions(-DMAKE_COMPILER)
-set(SOURCE_FILES main.cpp lib/grammar/Runtime.cpp lib/grammar/Runtime.h)
+set(SOURCE_FILES main.cpp lib/grammar/Runtime.cpp lib/grammar/Runtime.h lib/grammar/parser/tokenizer/tokenentity.cpp lib/grammar/parser/tokenizer/tokenentity.h lib/grammar/parser/tokenizer/tokentype.h lib/grammar/parser/tokenizer/tokenizer.cpp lib/grammar/parser/tokenizer/tokenizer.h lib/util/List2.h lib/grammar/parser/ParseError.cpp lib/grammar/parser/ParseError.h lib/util/keypair.h)
 #virtual machine
 #set(SOURCE_FILES main.cpp)
 
