Made performance improvements to tokenizer for faster compilation times

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,13 @@ project(Sharp)
 
 set(CMAKE_CXX_STANDARD 11)
 
+set(CMAKE_C_COMPILER "C:/MinGW/bin/gcc.exe")
+
 set(BUILD_SHARED_LIBS OFF)
 set(CMAKE_EXE_LINKER_FLAGS ${CMAKE_EXE_LINKER_FLAGS} "-static")
 
-#set(CMAKE_CXX_FLAGS_DEBUG  " ${CMAKE_CXX_FLAGS_DEBUG}")
-set(CMAKE_CXX_FLAGS_MINSIZEREL "-s -Os -O3 -Ofast ${CMAKE_CXX_FLAGS_MINSIZEREL}")
+set(CMAKE_C_FLAGS_DEBUG  "-lstdc++ ${CMAKE_CXX_FLAGS_DEBUG}")
+set(CMAKE_C_FLAGS_RELEASE  "-lstdc++ -s -O3 -Ofast ${CMAKE_CXX_FLAGS_MINSIZEREL}")
 
 # compiler
 add_definitions(-DMAKE_COMPILER)
