--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,12 +3,12 @@ project(Sharp)
 
 set(CMAKE_CXX_STANDARD 11)
 
-#set(CMAKE_C_COMPILER "C:/MinGW/bin/gcc.exe")
+set(CMAKE_C_COMPILER "C:/MinGW/bin/gcc.exe")
 
 set(BUILD_SHARED_LIBS OFF)
 set(CMAKE_EXE_LINKER_FLAGS ${CMAKE_EXE_LINKER_FLAGS} "-static")
 
-set(CMAKE_CXX_FLAGS_DEBUG  "-Werror -pthread -lstdc++ ${CMAKE_CXX_FLAGS_DEBUG}")
+set(CMAKE_C_FLAGS_DEBUG  "-Werror -g -lstdc++ ${CMAKE_C_FLAGS_DEBUG}")
 set(CMAKE_C_FLAGS_MINSIZEREL  "-Werror -lstdc++ -s -O3 -Ofast ${CMAKE_C_FLAGS_MINSIZEREL}")
 set(CMAKE_C_FLAGS_RELWITHDEBINFO  "-Werror -lstdc++ -O3 -Ofast ${CMAKE_C_FLAGS_MINSIZEREL}")
 #set(SHARPC "build")
