Start of code optimization

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(Sharp)
 
 set(CMAKE_CXX_STANDARD 11)
 
-#set(POSIX "os")
+set(POSIX "os")
 if (POSIX)
 
     set(BUILD_SHARED_LIBS OFF)
@@ -11,7 +11,7 @@ if (POSIX)
 
     set(CMAKE_CXX_FLAGS_DEBUG  "-Werror -pthread -lstdc++ ${CMAKE_CXX_FLAGS_DEBUG}")
     set(CMAKE_CXX_FLAGS_MINSIZEREL  "-Werror -lstdc++ -s -O3 -Ofast ${CMAKE_CXX_FLAGS_MINSIZEREL}")
-    set(CMAKE_CXX_FLAGS_RELWITHDEBINFO  "-Werror -lstdc++ -O3 -Ofast ${CMAKE_CXX_FLAGS_MINSIZEREL}")
+    set(CMAKE_CXX_FLAGS_RELEASE  "-Werror -pthread -lstdc++ -O3 -Ofast ${CMAKE_CXX_FLAGS_RELEASE}")
 else()
     set(CMAKE_C_COMPILER "C:/MinGW/bin/gcc.exe")
 
@@ -23,7 +23,7 @@ else()
     set(CMAKE_C_FLAGS_RELWITHDEBINFO  "-Werror -lstdc++ -O3 -Ofast ${CMAKE_C_FLAGS_MINSIZEREL}")
 endif ()
 
-set(SHARPC "build")
+#set(SHARPC "build")
 
 # Linux compiler console: g++ *.cpp ../../main.cpp ../util/*.cpp parser/*.cpp parser/*/*.cpp -lstdc++ -s -O3 -Ofast -o bootstrap -std=c++11
 
