added further machine level optimizations #3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ else()
     set(CMAKE_CXX_FLAGS_RELEASE   "-Werror -lstdc++ -O3 -Ofast ${CMAKE_CXX_FLAGS_RELEASE}")
 endif ()
 
-#set(SHARPC "build")
+set(SHARPC "build")
 
 # Linux compiler console: g++ *.cpp ../../main.cpp ../util/*.cpp parser/*.cpp parser/*/*.cpp -lstdc++ -s -O3 -Ofast -o bootstrap -std=c++11
 
