--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(Sharp)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(POSIX "os")
+#set(POSIX "os")
 if (POSIX)
 
     set(BUILD_SHARED_LIBS OFF)
@@ -22,7 +22,7 @@ else()
     set(CMAKE_CXX_FLAGS_RELEASE   "-Werror -lstdc++ -O3 -Ofast ${CMAKE_CXX_FLAGS_RELEASE}")
 endif ()
 
-#set(SHARPC "build")
+set(SHARPC "build")
 
 # Linux compiler console: g++ *.cpp ../../main.cpp ../util/*.cpp parser/*.cpp parser/*/*.cpp -lstdc++ -s -O3 -Ofast -o bootstrap -std=c++11
 
