Second pass on JIT Compiler rewrite - All code has been tested and verified to work on a windows x64bit platform - next steps write thread safety check, stack integrity checks, and all instructions for JIT

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,8 @@ else()
             "lib/util/jit/asmjit/src/asmjit/x86/*.cpp"
             "lib/util/jit/asmjit/src/asmjit/base/*.h"
             "lib/util/jit/asmjit/src/asmjit/base/*.cpp"
+            "lib/runtime/jit.cpp.old"
+            "lib/runtime/jit.h.old"
     )
     #            "lib/runtime/jit.cpp.old"
     #            "lib/runtime/jit.h.old"
