--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ else()
     set(CMAKE_CXX_FLAGS_RELEASE   "-std=c++11  -Werror -lstdc++  -O3 -g -Ofast ${CMAKE_C_FLAGS_RELEASE}")
 endif ()
 
-#set(SHARPC "build")
+set(SHARPC "build")
 
 # compiler
 if (SHARPC)
