Initial code for class pre processing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,11 +43,21 @@ if (SHARPC)
             "lib/grammar/frontend/*.cpp"
             "lib/grammar/taskdelegator/*.h"
             "lib/grammar/taskdelegator/*.cpp"
+            "lib/grammar/backend/dependency/*.h"
+            "lib/grammar/backend/dependency/*.cpp"
+            "lib/grammar/backend/preprocessor/*.h"
+            "lib/grammar/backend/preprocessor/*.cpp"
+            "lib/grammar/backend/astparser/*.h"
+            "lib/grammar/backend/astparser/*.cpp"
+            "lib/grammar/backend/*.h"
+            "lib/grammar/backend/*.cpp"
+            "lib/grammar/backend/types/*.h"
+            "lib/grammar/backend/types/*.cpp"
             "lib/util/*.cpp"
     )
 
 
-    set(SOURCE_FILES main.cpp stdimports.h ${compiler_SRC})
+    set(SOURCE_FILES main.cpp stdimports.h ${compiler_SRC} lib/grammar/backend/types/sharp_module.cpp lib/grammar/backend/types/sharp_module.h lib/grammar/compiler_info.cpp lib/grammar/backend/meta_data.h lib/grammar/backend/meta_data.cpp)
 
     add_executable(Sharpc ${SOURCE_FILES})
 else()
@@ -57,7 +67,7 @@ else()
     #            "lib/runtime/jit.cpp.old"
     #            "lib/runtime/jit.h.old"
     set(SOURCE_FILES main.cpp lib/runtime/scheduler/scheduler.cpp lib/runtime/main.cpp lib/runtime/architecture.h lib/runtime/List.h lib/runtime/memory/GarbageCollector.cpp lib/runtime/memory/GarbageCollector.h lib/runtime/symbols/Object.h lib/runtime/symbols/Exception.cpp lib/runtime/symbols/Exception.h lib/runtime/symbols/Field.h lib/runtime/symbols/ClassObject.cpp lib/runtime/symbols/ClassObject.h lib/runtime/register.h lib/runtime/fiber.h lib/runtime/fiber.cpp lib/runtime/symbols/Method.h lib/util/fmt/include/core.h lib/util/fmt/include/format.h lib/util/fmt/include/format-inl.h lib/util/fmt/include/ostream.h lib/util/fmt/include/posix.h lib/util/fmt/include/printf.h lib/util/fmt/include/ranges.h lib/util/fmt/include/time.h lib/util/fmt/src/format.cc lib/util/fmt/src/posix.cc lib/runtime/Thread.cpp lib/runtime/Thread.h lib/runtime/symbols/Object.cpp lib/runtime/Manifest.h lib/runtime/Manifest.cpp lib/runtime/Exe.h lib/runtime/Exe.cpp lib/util/zip/zcompress.cpp lib/util/zip/zcompress.h lib/util/zip/zcore.cpp lib/util/zip/zcore.h lib/util/zip/zdecompress.cpp lib/util/zip/zdecompress.h lib/util/zip/zinclude.h lib/util/zip/zlib.cpp lib/util/zip/zlib.h lib/util/zip/zstream.cpp lib/util/zip/zstream.h lib/runtime/VirtualMachine.cpp lib/runtime/VirtualMachine.h lib/runtime/main.h lib/util/File.cpp lib/util/File.h lib/util/time.cpp lib/util/time.h lib/util/KeyPair.h stdimports.h lib/runtime/Opcode.h lib/Modules/std.io/fileio.cpp lib/Modules/std.io/fileio.h lib/runtime/profiler.h lib/runtime/profiler.cpp lib/runtime/SignalHandler.cpp lib/runtime/termios.cpp lib/runtime/termios.h lib/Modules/math/cmath.cpp lib/Modules/math/cmath.h lib/Modules/std/Random.cpp lib/Modules/std/Random.h lib/Modules/std.os.gui/win/Gui.cpp lib/Modules/std.os.gui/win/Gui.h lib/runtime/Opcode.cpp lib/util/HashMap.h lib/runtime/symbols/symbol.h lib/runtime/symbols/symbol.cpp lib/runtime/symbols/param.h lib/Modules/std.io/memory.cpp lib/Modules/std.io/memory.h lib/runtime/snb/snb.cpp lib/runtime/snb/snb.h lib/runtime/Library.h lib/runtime/snb/util.h lib/runtime/scheduler/scheduler.h lib/runtime/linked_list.h lib/Modules/std.io/serialization.h lib/Modules/std.io/serialization.cpp lib/runtime/architecture.h lib/runtime/OpcodeInjection.h
-             lib/runtime/scheduler/thread_controller.cpp lib/runtime/scheduler/thread_controller.h lib/runtime/scheduler/task_controller.cpp lib/runtime/scheduler/task_controller.h lib/runtime/scheduler/thread_exception_controller.cpp lib/runtime/scheduler/thread_exception_controller.h lib/runtime/scheduler/idle_scheduler.cpp lib/runtime/scheduler/idle_scheduler.h lib/grammar/main.cpp lib/grammar/settings/settings.cpp lib/grammar/settings/settings.h lib/grammar/platform.h lib/grammar/compiler_info.h lib/grammar/settings/settings_processor.cpp lib/grammar/settings/settings_processor.h lib/grammar/json/json_array.h lib/grammar/json/json_value.h lib/grammar/json/json_parser.cpp lib/grammar/json/json_parser.h lib/grammar/json/json_member.h lib/grammar/json/json_type.h lib/grammar/json/json_object.h lib/grammar/taskdelegator/task_delegator.cpp lib/grammar/taskdelegator/task_delegator.h lib/grammar/taskdelegator/task_type.h lib/grammar/taskdelegator/task.h lib/grammar/taskdelegator/task_worker.cpp)
+             lib/runtime/scheduler/thread_controller.cpp lib/runtime/scheduler/thread_controller.h lib/runtime/scheduler/task_controller.cpp lib/runtime/scheduler/task_controller.h lib/runtime/scheduler/thread_exception_controller.cpp lib/runtime/scheduler/thread_exception_controller.h lib/runtime/scheduler/idle_scheduler.cpp lib/runtime/scheduler/idle_scheduler.h lib/grammar/backend/access_flag.h lib/grammar/backend/access_flag.cpp)
     if (POSIX)
         set(LRT_LIB -lrt -ldl)
     endif ()
