--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,6 +52,10 @@ if (SHARPC)
             "lib/grammar/backend/postprocessor/*.cpp"
             "lib/grammar/backend/astparser/*.h"
             "lib/grammar/backend/astparser/*.cpp"
+            "lib/grammar/backend/context/*.h"
+            "lib/grammar/backend/context/*.cpp"
+            "lib/grammar/backend/operation/*.h"
+            "lib/grammar/backend/operation/*.cpp"
             "lib/grammar/backend/*.h"
             "lib/grammar/backend/*.cpp"
             "lib/grammar/backend/types/*.h"
