added initial support for processing minus expression

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,6 +56,14 @@ if (SHARPC)
             "lib/grammar/backend/context/*.cpp"
             "lib/grammar/backend/compiler/*.h"
             "lib/grammar/backend/compiler/*.cpp"
+            "lib/grammar/backend/compiler/expressions/*.h"
+            "lib/grammar/backend/compiler/expressions/*.cpp"
+            "lib/grammar/backend/compiler/expressions/binary/*.h"
+            "lib/grammar/backend/compiler/expressions/binary/*.cpp"
+            "lib/grammar/backend/compiler/expressions/primary/*.h"
+            "lib/grammar/backend/compiler/expressions/primary/*.cpp"
+            "lib/grammar/backend/compiler/expressions/unary/*.h"
+            "lib/grammar/backend/compiler/expressions/unary/*.cpp"
             "lib/grammar/backend/operation/*.h"
             "lib/grammar/backend/operation/*.cpp"
             "lib/grammar/backend/*.h"
