Added the following: - Added support for "local variable", "local alias", "for", "foreach", "while", "dowhile", "throw", "continue", "break", "lock", "trycatch", "when", and "Label" statements - Added support for labels in code - Fixed major bug in parser for processing types

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,6 +76,8 @@ if (SHARPC)
             "lib/grammar/backend/compiler/functions/*.cpp"
             "lib/grammar/backend/compiler/functions/statements/*.h"
             "lib/grammar/backend/compiler/functions/statements/*.cpp"
+            "lib/grammar/backend/finalizer/*.h"
+            "lib/grammar/backend/finalizer/*.cpp"
             "lib/util/*.cpp"
     )
 
