Added the following: - Added support for exe file generation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,6 +87,7 @@ if (SHARPC)
             "lib/grammar/backend/finalizer/generation/code/scheme/*.h"
             "lib/grammar/backend/finalizer/generation/code/scheme/*.cpp"
             "lib/util/*.cpp"
+            "lib/util/zip/*.cpp"
     )
 
 
